<resources>
    <string name="app_name">Open Weather</string>

    <string name="text_no_found_search">"Поиск не дал результатов"</string>
    <string name="text_search">"Поиск"</string>
    <string name="text_sign_in">"Войти"</string>
    <string name="text_log_in">"Вход"</string>
    <string name="text_out">"Выйти"</string>
    <string name="text_not_acc_quest">"У вас ещё нет аккаунта?"</string>
    <string name="text_is_acc_quest">"Есть аккаунт?"</string>
    <string name="text_register">"Зарегистрироваться"</string>
    <string name="text_reg_small">"Регистрация"</string>
    <string name="text_today">"Сегодня:"</string>
    <string name="unit_celsius">"°"</string>

    <string name="text_unit_celsius">"%d°"</string>
    <string name="text_unit_percent">"%d%%"</string>
    <string name="text_unit_ms">"%.1f м/с"</string>

    <string name="no_internet">"No internet connection. Please try again later."</string>
    <string name="has_error">"An error has occurred. Please try again."</string>
    <string name="unknown_exception">"Unknown Exception"</string>

    <string name="text_cap">"- -"</string>

    <!--Location Screen-->
    <string name="location_screen_determine">"We determine your location"</string>
    <string name="location_screen_ready">"Ready."</string>

    <!--Home Screen-->
    <string name="home_screen_local">"%s,"</string>
    <string name="home_screen_today_date">"Today, %s"</string>
    <string name="home_screen_wind">"Wind"</string>
    <string name="home_screen_index_uv">"Index UV"</string>
    <string name="home_screen_feel_like">"Feel like"</string>
    <string name="home_screen_humidity">"Humidity"</string>
    <string name="home_screen_today">"Today"</string>
    <string name="home_screen_another_days">"Another 7 days"</string>

</resources>