<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground">


    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/inputName"
        app:layout_constraintEnd_toEndOf="@+id/inputName"
        app:layout_constraintStart_toStartOf="@+id/inputName">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_not_acc_quest"
            android:textStyle="bold"
            />

        <TextView
            android:id="@+id/toRegisterClick"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="10dp"
            android:text="@string/text_register"
            android:textColor="@android:color/holo_blue_light"
            android:textStyle="bold" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <TextView
        android:id="@+id/text_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:text="@string/app_name"
        android:textSize="28dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/viewIcon"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_baseline_cloud_queue_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/text_title"
        app:layout_constraintStart_toStartOf="@+id/text_title"
        app:layout_constraintTop_toBottomOf="@+id/text_title"
        app:layout_constraintVertical_bias="0.02" />

    <EditText
        android:id="@+id/inputName"
        android:layout_width="250dp"
        android:layout_height="35dp"
        android:layout_marginTop="80dp"
        android:background="@drawable/style_border"
        android:elevation="1dp"
        android:hint="E-mail"
        android:inputType="textEmailAddress"
        android:paddingStart="10dp"
        android:textSize="16dp"
        app:layout_constraintEnd_toEndOf="@+id/viewIcon"
        app:layout_constraintStart_toStartOf="@+id/viewIcon"
        app:layout_constraintTop_toBottomOf="@+id/viewIcon" />

    <EditText
        android:id="@+id/inputPassword"
        android:layout_width="250dp"
        android:layout_height="35dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/style_border"
        android:elevation="1dp"
        android:hint="Password"
        android:inputType="textPassword"
        android:paddingStart="10dp"
        android:selectAllOnFocus="false"
        android:textSize="16dp"
        app:layout_constraintEnd_toEndOf="@+id/inputName"
        app:layout_constraintStart_toStartOf="@+id/inputName"
        app:layout_constraintTop_toBottomOf="@+id/inputName" />

    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/style_border"
        android:elevation="1dp"
        android:text="@string/text_sign_in"
        android:textAllCaps="false"
        android:textSize="16dp"

        app:layout_constraintEnd_toEndOf="@+id/inputPassword"
        app:layout_constraintStart_toStartOf="@+id/inputPassword"
        app:layout_constraintTop_toBottomOf="@+id/inputPassword" />

    <TextView
        android:id="@+id/textWrongLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@+id/buttonLogin" />


</androidx.constraintlayout.widget.ConstraintLayout>