<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground">


    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/linearLayoutCompat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/edit_email"
        app:layout_constraintEnd_toEndOf="@+id/edit_email"
        app:layout_constraintStart_toStartOf="@+id/edit_email">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_is_acc_quest"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/log_in_click"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="10dp"
            android:text="@string/text_log_in"
            android:textColor="@android:color/holo_blue_light"
            android:textStyle="bold" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <TextView
        android:id="@+id/text_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:text="@string/app_name"
        android:textSize="28dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/view_image"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_baseline_cloud_queue_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/text_title"
        app:layout_constraintStart_toStartOf="@+id/text_title"
        app:layout_constraintTop_toBottomOf="@+id/text_title"
        app:layout_constraintVertical_bias="0.02" />

    <EditText
        android:id="@+id/edit_email"
        android:layout_width="250dp"
        android:layout_height="35dp"
        android:layout_marginTop="80dp"
        android:background="@drawable/style_border"
        android:elevation="1dp"
        android:hint="E-mail"
        android:inputType="textEmailAddress"
        android:paddingStart="10dp"
        android:textSize="16dp"
        app:layout_constraintEnd_toEndOf="@+id/view_image"
        app:layout_constraintStart_toStartOf="@+id/view_image"
        app:layout_constraintTop_toBottomOf="@+id/view_image" />


    <EditText
        android:id="@+id/edit_password"
        android:layout_width="250dp"
        android:layout_height="35dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/style_border"
        android:elevation="1dp"
        android:hint="Password"
        android:inputType="textPassword"
        android:paddingStart="10dp"
        android:selectAllOnFocus="false"
        android:textSize="16dp"
        app:layout_constraintEnd_toEndOf="@+id/edit_email"
        app:layout_constraintStart_toStartOf="@+id/edit_email"
        app:layout_constraintTop_toBottomOf="@+id/edit_email" />

    <Button
        android:id="@+id/btn_register"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/style_border"
        android:elevation="1dp"
        android:text="@string/text_reg_small"
        android:textAllCaps="false"
        android:textSize="16dp"
        app:layout_constraintEnd_toEndOf="@+id/edit_password"
        app:layout_constraintStart_toStartOf="@+id/edit_password"
        app:layout_constraintTop_toBottomOf="@+id/edit_password" />

    <TextView
        android:id="@+id/text_wrong_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:gravity="center"
        android:textColor="@android:color/holo_red_light"
        app:layout_constraintTop_toBottomOf="@+id/btn_register"/>


</androidx.constraintlayout.widget.ConstraintLayout>